# cop3530-project3

./: .gitignore  CMakeLists.txt  data-parser.js  readme.md  requirements.txt  test_request.json
backend/: CMakeLists.txt  SETUP_GUIDE.md
backend/include/: AStar.h  AdjacencyList.h  Dijkstra.h
backend/src/: AStar.cpp  AdjacencyList.cpp  Dijkstra.cpp  http_server.cpp  main.cpp
backend/test/: test.cpp
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
frontend-next/: README.md  components.json  package-lock.json  package.json
frontend-next/src/app/: page.tsx
frontend-next/src/app/dashboard/: page.tsx
frontend-next/src/components/: algorithm-comparison.tsx  app-sidebar.tsx  location-input.tsx  map-visualizer.tsx  nav-documents.tsx  nav-secondary.tsx  section-cards.tsx  site-header.tsx
frontend-next/src/components/ui/: sidebar.tsx
frontend-next/src/lib/: parsed-station-data.json
frontend-next/src/lib/api/: findRoute.tsx  route-api.ts
frontend-next/src/types/: RouteTypes.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: findRoute.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: DateTimePicker.ts  MapView.tsx  RouteDisplay.tsx  StationCard.tsx  StationSelect.tsx
frontend/src/mock/: mockRoute.ts
frontend/src/pages/: Home.tsx
frontend/src/types/: RouteTypes.ts
frontend/src/utils/: mockTimes.ts
